--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,8 @@
     </style>
         <!-- START CONTENT -->
         <div ng-include="'partials/navigation.html'"></div>
-        <div ng-include="'partials/login.html'"></div>
+        <!-- <div ng-include="'partials/login.html'"></div> -->
+        <div ng-include="'partials/registration.html'"></div>
         <!-- END CONTENT -->
 
         <!-- JQUERY -->
