--- a/site/test.html
+++ b/site/test.html
@@ -24,12 +24,28 @@
         <!-- Model -->
         <script src="js/main_app.js"></script>
         <script src="js/routes.js"></script>
+        <script type="text/javascript">
+
+        angular.module('MainApp').controller('testCtrl', function($scope) {
+            $scope.mode = 2;
+        });
+
+        var a = {data: 3};
+        var b = {data: 4};
+        alert(a.data);
+
+        </script>
     </head>
-    <body ng-controller="AuthorController as author">
+    <body ng-controller="testCtrl">
 
         <!-- START CONTENT -->
-        <div ng-include="'templates/navigation.html'"></div>
-        <div ng-view></div>
+        <div>hello <span ng-hide="3 > 1">World</span></div>
+
+        <div ng-switch on='mode'>
+            <span ng-switch-when='1'>1</span>
+            <span ng-switch-when='2'>2</span>
+            <span ng-switch-when='3'>3</span>
+        </div>
         <!-- <div ng-hide="author.isAuth">
             <div ng-include="'templates/anonymous/login.html'"></div>
             <div ng-include="'templates/anonymous/registration.html'"></div>
