--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,8 @@
         <!-- ANGULAR -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+        <!-- Services -->
+        <script src="js/services/authInterceptor.js"></script>
         <!-- Controllers -->
         <script src="js/controllers/NoteController.js"></script>
         <script src="js/controllers/PanelController.js"></script>
